--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "local-ip-address": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropdown-select": "^4.11.1",
     "react-hot-toast": "^2.4.1",
     "react-paginate": "^8.2.0",
     "react-router-dom": "^6.16.0",
